# LiteChatClient

./: .gitignore  CMakeLists.txt  README.md
header/: clientlogger.h  connectdialog.h  exceptionhandler.h  friendmanager.h  logindialog.h  mainwindow.h  messagemanager.h  networkmanager.h  registerdialog.h  searchresultdialog.h  userinfodialog.h  usermanager.h
src/: clientlogger.cpp  connectdialog.cpp  exceptionhandler.cpp  friendmanager.cpp  logindialog.cpp  main.cpp  mainwindow.cpp  messagemanager.cpp  networkmanager.cpp  registerdialog.cpp  searchresultdialog.cpp  userinfodialog.cpp  usermanager.cpp
ui/: connectdialog.ui  logindialog.ui  registerdialog.ui  userinfodialog.ui
